--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "@types/reactstrap": "^8.7.2"
   }
 }
